[gd_scene load_steps=3 format=2]

[ext_resource path="res://minigames/whackamole/angelpuppet.png" type="Texture" id=1]
[ext_resource path="res://minigames/whackamole/mole.gd" type="Script" id=2]

[node name="Mole" type="TextureButton"]
margin_right = 12.0
margin_bottom = 20.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="." to="." method="_on_Mole_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
